// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils checkIfExistsAndAddValue should create new prop if none exist 1`] = `
"
			module.exports = {
                entry: 'index.js',
                externals: \\"React\\"
            }
			"
`;

exports[`utils checkIfExistsAndAddValue should override prop if it exists 1`] = `
"
			module.exports = {
				entry: \\"app.js\\"
			}
			"
`;

exports[`utils createIdentifierOrLiteral should create basic literal 1`] = `"'stringLiteral'"`;

exports[`utils createIdentifierOrLiteral should create boolean 1`] = `"true"`;

exports[`utils createLiteral should create basic literal 1`] = `"\\"stringLiteral\\""`;

exports[`utils createLiteral should create boolean 1`] = `"true"`;

exports[`utils createOrUpdatePluginByName should add an object as an argument 1`] = `
"[new Plugin({
  \\"foo\\": true
})]"
`;

exports[`utils createOrUpdatePluginByName should create a new plugin with arguments 1`] = `
"{ plugins: [new Plugin({
  \\"foo\\": \\"bar\\"
})] }"
`;

exports[`utils createOrUpdatePluginByName should create a new plugin without arguments 1`] = `"{ plugins: [new Plugin()] }"`;

exports[`utils createOrUpdatePluginByName should merge options objects 1`] = `
"[new Plugin({
  \\"foo\\": false,
  \\"bar\\": \\"baz\\",
  \\"baz-long\\": true
})]"
`;

exports[`utils createProperty should create properties for Boolean 1`] = `
"{
    \\"foo\\": true
}"
`;

exports[`utils createProperty should create properties for Number 1`] = `
"{
    \\"foo\\": -1
}"
`;

exports[`utils createProperty should create properties for String 1`] = `
"{
    \\"foo\\": \\"bar\\"
}"
`;

exports[`utils createProperty should create properties for complex keys 1`] = `
"{
    \\"foo-bar\\": \\"bar\\"
}"
`;

exports[`utils createProperty should create properties for non-literal keys 1`] = `
"{
    1: \\"bar\\"
}"
`;

exports[`utils getRequire should create a require statement 1`] = `"const filesys = require(\\"fs\\");"`;
